changing adrr to variable

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,12 +1,16 @@
-preload = wallpaper/wallpaper1.png
+#Variable
+$wallpaper1 = wallpaper/wallpaper1.png
+$wallpaper2 = wallpaper/wallpaper4.webp
+
+preload = $wallpaper1
 #if more than one preload is desired then continue to preload other backgrounds
-preload = wallpaper/wallpaper4.webp
+preload = $wallpaper2
 # .. more preloads
 
 #set the default wallpaper(s) seen on initial workspace(s) --depending on the number of monitors used
-wallpaper = eDP-1, wallpaper/wallpaper1.png
+wallpaper = eDP-1, $wallpaper1
 #if more than one monitor in use, can load a 2nd image
-wallpaper = HDMI-A-1, wallpaper/wallpaper4.webp
+wallpaper = HDMI-A-1, $wallpaper2
 # .. more monitors
 
 #enable splash text rendering over the wallpaper
